2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Make libcdio an optional library again,
	it would conflict with the GPL + exception license

	* libjuicer/Makefile.am:
	* libjuicer/sj-metadata-getter.c (lookup_cd):
	* libjuicer/sj-metadata-gvfs.c (device_to_cdda_uri),
	(gvfs_list_albums), (sj_metadata_gvfs_get_property),
	(sj_metadata_gvfs_set_property), (sj_metadata_gvfs_finalize),
	(sj_metadata_gvfs_init), (metadata_iface_init),
	(sj_metadata_gvfs_class_init), (sj_metadata_gvfs_new):
	* libjuicer/sj-metadata-gvfs.h: Add a gvfs based metadata
	reader, for fallback support

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-error.c:
	* libjuicer/sj-error.h:
	* libjuicer/sj-structures.c:
	* libjuicer/sj-structures.h: Relicense those 4 files under
	the LGPL, see #550481 for details

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-structures.h: Remove unneeded include

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-metadata-getter.c (sj_metadata_getter_set_cdrom):
	* libjuicer/sj-metadata.c (sj_metadata_helper_check_media):
	Move in 2 pieces of code from Rhythmbox (compile-time option
	of using totem-pl-parser for device checking, Solaris device
	work-around)

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-metadata-musicbrainz.c (mb_list_albums):
	* libjuicer/sj-metadata-musicbrainz3.c (mb_list_albums):
	* libjuicer/sj-metadata-musicbrainz3.h:
	* libjuicer/sj-metadata.c (sj_metadata_helper_check_media):
	* libjuicer/sj-metadata.h: Move the nautilus-burn assisted
	media type checking to a shared location

2008-09-04  Bastien Nocera  <hadess@hadess.net>

	* libjuicer/sj-metadata-musicbrainz.c (mb_list_albums):
	* libjuicer/sj-metadata-musicbrainz3.c (make_album_from_release):
	* libjuicer/sj-metadata.c (sj_metadata_helper_scan_date):
	* libjuicer/sj-metadata.h: Move the date parsing to a common place

2008-09-04  Bastien Nocera  <hadess@hadess.net>
