@@ -22,7 +22,6 @@
  */
 
 #include "sj-structures.h"
-#include "sj-util.h"
 #include <glib/gmessages.h>
 #include <glib/glist.h>
 
@@ -51,7 +50,8 @@ void album_details_free(AlbumDetails *album)
   g_free (album->genre);
   g_free (album->album_id);
   if (album->release_date) g_date_free (album->release_date);
-  g_list_deep_free (album->tracks, (GFunc)track_details_free);
+  g_list_foreach (album->tracks, (GFunc)track_details_free, NULL);
+  g_list_free (album->tracks);
   g_free (album->artist_sortname);
   g_free (album->asin);
   g_free (album->discogs);
