@@ -1,5 +1,15 @@
 2008-09-04  Bastien Nocera  <hadess@hadess.net>
 
+	* libjuicer/sj-metadata-cdtext.c (cdtext_list_albums):
+	Remove some TODO items
+
+	* libjuicer/sj-metadata-musicbrainz3.c:
+	* libjuicer/sj-metadata.c (sj_metadata_helper_check_media):
+	* libjuicer/sj-structures.c (album_details_free):
+	Fixes for rhythmbox compilation
+
+2008-09-04  Bastien Nocera  <hadess@hadess.net>
+
 	* configure.in: Make libcdio an optional library again,
 	it would conflict with the GPL + exception license
 
